--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+    <!-- Icons -->
+    <link rel="stylesheet" href="./assets/fonts/style.css" />
+
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -22,7 +25,18 @@
     <header id="header">
       <nav class="container">
         <a href="#" class="logo"><span>Açaízão</span> da esquina</a>
-        <div></div>
+        <div class="menu">
+          <ul class="grid">
+            <li><a class="title" href="#home">Início</a></li>
+            <li><a class="title" href="#about">Sobre</a></li>
+            <li><a class="title" href="#services">Serviços</a></li>
+            <li><a class="title" href="#testimonials">Depoimentos</a></li>
+            <li><a class="title" href="#contacts">Contato</a></li>
+          </ul>
+        </div>
+
+        <div class="toggle icon-menu"></div>
+        <div class="toggle icon-close"></div>
       </nav>
     </header>
 
@@ -36,7 +50,7 @@
             />
           </div>
           <div class="text">
-            <h1>O melhor açaí da cidade</h1>
+            <h2 class="title">O melhor açaí da cidade</h2>
             <p>Alta qualidade de serviço e produto entregue em Castanhal</p>
             <a href="" class="button">Ver produtos</a>
           </div>
@@ -45,9 +59,17 @@
 
       <div class="divider-1"></div>
 
-      <section class="section">outra section</section>
+      <section class="section" id="about">
+        <div class="container grid">Sobre</div>
+      </section>
+
+      <section class="section" id="services">
+        <div class="container grid">Sobre</div>
+      </section>
     </main>
 
     <footer></footer>
+
+    <script src="./scripts/main.js"></script>
   </body>
 </html>
