--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <ul class="grid">
             <li><a class="title" href="#home">Início</a></li>
             <li><a class="title" href="#about">Sobre</a></li>
-            <li><a class="title" href="#services">Serviços</a></li>
+            <li><a class="title" href="#products">Produtos</a></li>
             <li><a class="title" href="#testimonials">Depoimentos</a></li>
             <li><a class="title" href="#contacts">Contato</a></li>
           </ul>
@@ -60,11 +60,36 @@
       <div class="divider-1"></div>
 
       <section class="section" id="about">
-        <div class="container grid">Sobre</div>
+        <div class="container grid">
+          <div class="image">
+            <img
+              src="./assets/images/be8721a288ad6f32ed237b9cf909dd00.jpg"
+              alt="Imagem de açaí"
+            />
+          </div>
+          <div class="text">
+            <h2 class="title">Sobre nós</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta ab
+              doloremque assumenda totam iste numquam necessitatibus nostrum
+              commodi dignissimos dolor expedita ex ratione odio mollitia,
+              tempora molestias qui provident atque!
+            </p>
+            <br />
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta ab
+              doloremque assumenda totam iste numquam necessitatibus nostrum
+              commodi dignissimos dolor expedita ex ratione odio mollitia,
+              tempora molestias qui provident atque!
+            </p>
+          </div>
+        </div>
       </section>
 
-      <section class="section" id="services">
-        <div class="container grid">Sobre</div>
+      <div class="divider-2"></div>
+
+      <section class="section" id="products">
+        <div class="container grid">Produtos</div>
       </section>
     </main>
 
