--- a/index.html
+++ b/index.html
@@ -89,7 +89,57 @@
       <div class="divider-2"></div>
 
       <section class="section" id="products">
-        <div class="container grid">Produtos</div>
+        <div class="container grid">
+          <header>
+            <h2 class="title">Produtos</h2>
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quis
+              sequi officia corporis ullam vitae totam maxime, repellat et unde
+              ad.
+            </p>
+          </header>
+          <div class="cards grid">
+            <div class="card">
+              <div class="image">
+                <img
+                  src="./assets/images/be8721a288ad6f32ed237b9cf909dd00.jpg"
+                  alt="Imagem de açaí"
+                />
+              </div>
+              <h3 class="title">Produto 1</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi,
+                similique? Nihil nulla vero ut praesentium?
+              </p>
+            </div>
+            <div class="card">
+              <div class="image">
+                <img
+                  src="./assets/images/be8721a288ad6f32ed237b9cf909dd00.jpg"
+                  alt="Imagem de açaí"
+                />
+              </div>
+              <h3 class="title">Produto 2</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                Consequuntur impedit dolorem consequatur possimus ut nihil.
+              </p>
+            </div>
+            <div class="card">
+              <div class="image">
+                <img
+                  src="./assets/images/be8721a288ad6f32ed237b9cf909dd00.jpg"
+                  alt="Imagem de açaí"
+                />
+              </div>
+              <h3 class="title">Produto 3</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Recusandae laborum eum doloremque, in debitis cupiditate.
+              </p>
+            </div>
+          </div>
+        </div>
       </section>
     </main>
 
