estilizações e scroll suave

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </head>
 
   <body>
-    <header id="header">
+    <header id="header" class="scroll">
       <nav class="container">
         <a href="#" class="logo"><span>Açaízão</span> da esquina</a>
         <div class="menu">
