--- a/index.html
+++ b/index.html
@@ -141,6 +141,69 @@
           </div>
         </div>
       </section>
+
+      <div class="divider-1"></div>
+
+      <section class="section" id="testimonials">
+        <div class="container grid">
+          <header>
+            <h2 class="title">Depoimentos de clientes</h2>
+          </header>
+          <div class="testimonials">
+            <div class="testimonial">
+              <blockquote>
+                <p>
+                  <span>&ldquo;</span>
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                  Aspernatur ipsum voluptatibus ex voluptatum velit molestias
+                  aut cum nobis amet enim!
+                </p>
+                <cite>
+                  <img
+                    src="./assets/images/fotos/34.jpg"
+                    alt="Foto de cliente"
+                  />
+                  Alguma Pessoa
+                </cite>
+              </blockquote>
+            </div>
+            <div class="testimonial">
+              <blockquote>
+                <p>
+                  <span>&ldquo;</span>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Non
+                  quisquam illum unde tempora rerum repudiandae praesentium
+                  dolor, corrupti et fuga.
+                </p>
+                <cite>
+                  <img
+                    src="./assets/images/fotos/52.jpg"
+                    alt="Foto de cliente"
+                  />
+                  Segunda Pessoa
+                </cite>
+              </blockquote>
+            </div>
+            <div class="testimonial">
+              <blockquote>
+                <p>
+                  <span>&ldquo;</span>
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                  Quibusdam ducimus est voluptatum eius fugit delectus numquam
+                  optio at, eaque ab?
+                </p>
+                <cite>
+                  <img
+                    src="./assets/images/fotos/82.jpg"
+                    alt="Foto de cliente"
+                  />
+                  Terceira Pessoa
+                </cite>
+              </blockquote>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
 
     <footer></footer>
