--- a/index.html
+++ b/index.html
@@ -215,6 +215,36 @@
           </div>
         </div>
       </section>
+
+      <div class="divider-2"></div>
+
+      <section class="section" id="contact">
+        <div class="container grid">
+          <div class="text">
+            <h2 class="title">Entre em contato</h2>
+            <p>
+              Entre em contato para encomendar nossos produtos, tirar suas
+              dúvidas, enviar críticas e sugestões
+            </p>
+            <a
+              href="https://api.whatsapp.com/send?phone=+5591999999999"
+              class="button"
+              target="_blank"
+              ><i class="icon-whatsapp"></i>Entrar em contato</a
+            >
+          </div>
+
+          <div class="contacts">
+            <ul class="grid">
+              <li><i class="icon-phone"></i>91 99999-9999</li>
+              <li>
+                <i class="icon-map-pin"></i>Rua no canto ali do lado, 2222
+              </li>
+              <li><i class="icon-mail"></i>contato@contato.com</li>
+            </ul>
+          </div>
+        </div>
+      </section>
     </main>
 
     <footer></footer>
