utilização do plugin scrollreveal

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <li><a class="title" href="#about">Sobre</a></li>
             <li><a class="title" href="#products">Produtos</a></li>
             <li><a class="title" href="#testimonials">Depoimentos</a></li>
-            <li><a class="title" href="#contacts">Contato</a></li>
+            <li><a class="title" href="#contact">Contato</a></li>
           </ul>
         </div>
 
@@ -251,6 +251,11 @@
 
     <!-- swiper plugin -->
     <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
+
+    <!-- scrollreveal plugin -->
+    <script src="https://unpkg.com/scrollreveal"></script>
+
+    <!-- script -->
     <script src="./scripts/main.js"></script>
   </body>
 </html>
