--- a/index.html
+++ b/index.html
@@ -245,9 +245,30 @@
           </div>
         </div>
       </section>
-    </main>
 
-    <footer></footer>
+      <div class="divider-1"></div>
+
+      <footer class="section">
+        <div class="container grid">
+          <div class="brand">
+            <a href="#home" class="logo logo-alt"
+              ><span>Açaízão</span> da esquina</a
+            >
+            <p>©2021 Açaízão da esquina.</p>
+            <p>Todos os direitos reservados.</p>
+          </div>
+
+          <div class="social">
+            <a href="https://www.instagram.com" target="_blank"
+              ><i class="icon-instagram"></i
+            ></a>
+            <a href="https://www.facebook.com/" target="_blank"
+              ><i class="icon-facebook"></i
+            ></a>
+          </div>
+        </div>
+      </footer>
+    </main>
 
     <!-- swiper plugin -->
     <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
