--- a/index.html
+++ b/index.html
@@ -247,28 +247,30 @@
       </section>
 
       <div class="divider-1"></div>
-
-      <footer class="section">
-        <div class="container grid">
-          <div class="brand">
-            <a href="#home" class="logo logo-alt"
-              ><span>Açaízão</span> da esquina</a
-            >
-            <p>©2021 Açaízão da esquina.</p>
-            <p>Todos os direitos reservados.</p>
-          </div>
-
-          <div class="social">
-            <a href="https://www.instagram.com" target="_blank"
-              ><i class="icon-instagram"></i
-            ></a>
-            <a href="https://www.facebook.com/" target="_blank"
-              ><i class="icon-facebook"></i
-            ></a>
-          </div>
-        </div>
-      </footer>
     </main>
+
+    <footer class="section">
+      <div class="container grid">
+        <div class="brand">
+          <a href="#home" class="logo logo-alt"
+            ><span>Açaízão</span> da esquina</a
+          >
+          <p>©2021 Açaízão da esquina.</p>
+          <p>Todos os direitos reservados.</p>
+        </div>
+
+        <div class="social">
+          <a href="https://www.instagram.com" target="_blank"
+            ><i class="icon-instagram"></i
+          ></a>
+          <a href="https://www.facebook.com/" target="_blank"
+            ><i class="icon-facebook"></i
+          ></a>
+        </div>
+      </div>
+    </footer>
+
+    <a href="#home" class="back-to-top"><i class="icon-arrow-up"></i></a>
 
     <!-- swiper plugin -->
     <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
