--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <div class="container grid">
           <header>
             <h2 class="title">Produtos</h2>
-            <p>
+            <p class="subtitle">
               Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quis
               sequi officia corporis ullam vitae totam maxime, repellat et unde
               ad.
