--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
             <h2 class="title">Entre em contato</h2>
             <p>
               Entre em contato para encomendar nossos produtos, tirar suas
-              dúvidas, enviar críticas e sugestões
+              dúvidas, enviar críticas e sugestões.
             </p>
             <a
               href="https://api.whatsapp.com/send?phone=+5591999999999"
